POR/RefEdge/src/objects/Reference_Interview__c.object
<CustomObject>
    <description>Custom Object to use Reference Interview Content type(Bound 6)</description>
    <fields>
        <fullName>Org_description__c</fullName>
        <label>Org description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Org_website__c</fullName>
        <label>Org website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photograph__c</fullName>
        <label>Photograph</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Content__c</fullName>
        <label>Reference Content</label>
        <referenceTo>Reference_Content__c</referenceTo>
        <relationshipLabel>Reference Interviews</relationshipLabel>
        <relationshipName>Reference_Interviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speaker_info__c</fullName>
        <label>Speaker info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transcript_Content_Id__c</fullName>
        <label>Transcript Content Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript__c</fullName>
        <formula>IF(ISBLANK(Transcript_Content_Id__c), &apos;No Content&apos;, HYPERLINK(&apos;/&apos;+Transcript_Content_Id__c , &apos;View Content&apos;))</formula>
        <label>Transcript</label>
        <type>Text</type>
    </fields>
    <label>Reference Interview</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Reference Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>